Thu Aug 12 16:42:02 1993  Kevin Layer  (layer@sole)

	* UserGuide.n: remove fi:restart-common-lisp, since it is complete
	redundant.

>>>	* fi-changes.el: new variable fi:change-definitions-since-default.

	* fi-lemacs.el: remove ref to fi:restart-common-lisp.

	* fi-modes.el: fix for "-*- package: -*-" mode line

	* fi-subproc.el: detect when rsh fails and print something
	intelligent; remove fi:restart-common-lisp

*******************************************************************************
2.0.6, limited test release
*******************************************************************************

Wed Aug 11 10:05:19 1993  Kevin Layer  (layer@sole)

	* fi-keys.el: fix for fsf emacs 19

	* fi-lep.el: fix doc string

Tue Jul 27 13:07:02 1993  Kevin Layer  (layer at sole)

	* clmanaux.c: exit status <0 means `failed'
	* clman.c: exit status 0 means `failed'
	* makeman.c: exit status -1 means `failed'
	* clman.h: extern for `failed'

	* fi-basic-lep.el: open-network-stream -> fi::open-network-stream;
	prin1-to-string -> fi::prin1-to-string

	* fi-clman.el: use minibuffer in `failed' case

	* fi-leep-lemacs.el: start of fix for bug2757

	* fi-subproc.el: open-network-stream -> fi::open-network-stream

	* fi-utils.el: fi::open-network-stream, so we can catch certain
	errors (like /etc/hosts not being readable); fi::prin1-to-string,
	so we can make sure print-escape-newlines is nil.

	* Doc.el: prin1-to-string -> fi::prin1-to-string

Fri Jul 23 00:01:17 1993  Kevin Layer  (layer@sole)

	* Makefile: fix fi-dist rule, add clman-dist; move contents of
	Makefile.fi here

Thu Jul 22 20:45:32 1993  Kevin Layer  (layer at sole)

	* Makefile: new file fi-leep-lemacs.el

	* fi-clman.el: look in exec-path for `clman'

	* fi-leep-lemacs.el: presenting listeners work for lemacs!

	* fi-leep.el: push more stuff on fi::initialization-forms

	* fi-site-init.el: load fi-leep-lemacs.elc, when in lemacs

	* fi-subproc.el: generalize and hooks to fi::subprocess-filter so