@@ -1,3 +1,15 @@
+Tue Aug 31 12:01:14 1993  Kevin Layer  (layer@sole)
+
+	* fi-changes.el: fix remaining problems with numbered backups.
+	The problem was that find-backup-file-name for numbered backups
+	returns the "next" backup filename; fix docstrings.
+
+	* fi-gnu.el: new file
+
+	* fi-site-init.el: add load of fi-gnu.elc.
+
+	* fi-utils.el: fsf emacs 19 fix
+
 Thu Aug 12 16:42:02 1993  Kevin Layer  (layer@sole)
 
 	* UserGuide.n: remove fi:restart-common-lisp, since it is complete
